test/files/neg/overload-msg.check
overload-msg.scala:3: error: overloaded method value + with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: scala.Int)scala.Int <and>
  (x: Char)scala.Int <and>
  (x: Short)scala.Int <and>
  (x: Byte)scala.Int <and>
  (x: String)String
 cannot be applied to (Int(in method f))
  def f[Int](y: Int) = x + y
                         ^
one error found
